--- a/responsive/pubspec.yaml
+++ b/responsive/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   chat_bubbles: ^1.3.1
+  chips_choice: ^3.0.0
 
 dev_dependencies:
   flutter_test:
