--- a/responsive/pubspec.yaml
+++ b/responsive/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   chat_bubbles: ^1.3.1
   chips_choice: ^3.0.0
+  curved_navigation_bar: ^1.0.3
 
 dev_dependencies:
   flutter_test:
